logs/validate.20260325-222110.log
error[E0283]: type annotations needed
   --> src/Chap65/UnionFindStEph.rs:754:9
    |
754 |         lemma_union_wf_roots(
    |         ^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `V` declared on the function `lemma_union_wf_roots`
    |
    = note: cannot satisfy `_: Types::Types::StT`
note: required by a bound in `Chap65::UnionFindStEph::UnionFindStEph::lemma_union_wf_roots`
   --> src/Chap65/UnionFindStEph.rs:327:38
    |
327 |     proof fn lemma_union_wf_roots<V: StT + Hash>(
    |                                      ^^^ required by this bound in `lemma_union_wf_roots`
help: consider specifying the generic argument
    |
754 |         lemma_union_wf_roots::<V>(
    |                             +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
Elapsed: 1s
